--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         >
       </div>
       <div class="home-img">
-        <img src="avt.png" alt="Tran Thien Quoc Anh" />
+        <img src="avt-profile.jpg" alt="Tran Thien Quoc Anh" />
       </div>
     </section>
 
